--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -520,21 +520,21 @@
     <Compile Include="MarkupData\mzML\XML\Ions.vb" />
     <Compile Include="MarkupData\mzML\XML\Components.vb" />
     <Compile Include="MarkupData\mzML\XML\Configurations.vb" />
-    <Compile Include="mzData\Binary\BinaryStreamWriter.vb" />
-    <Compile Include="mzData\Binary\BinaryStreamReader.vb" />
-    <Compile Include="mzData\Binary\NamespaceDoc.vb" />
-    <Compile Include="mzData\Stream\MSScan.vb" />
+    <Compile Include="mzPack\Binary\BinaryStreamWriter.vb" />
+    <Compile Include="mzPack\Binary\BinaryStreamReader.vb" />
+    <Compile Include="mzPack\Binary\NamespaceDoc.vb" />
+    <Compile Include="mzPack\Stream\MSScan.vb" />
     <Compile Include="UnifyReader\Chromatogram.vb" />
     <Compile Include="UnifyReader\imzMLScan.vb" />
     <Compile Include="UnifyReader\Provider.vb" />
     <Compile Include="UnifyReader\mzMLScan.vb" />
     <Compile Include="UnifyReader\mzXMLScan.vb" />
     <Compile Include="UnifyReader\MsDataReader.vb" />
-    <Compile Include="mzData\mzWebCache\Cache.vb" />
-    <Compile Include="mzData\mzWebCache\mzMLScans.vb" />
-    <Compile Include="mzData\mzWebCache\mzXMLScans.vb" />
-    <Compile Include="mzData\mzWebCache\ScanPopulator.vb" />
-    <Compile Include="mzData\Stream\Scan.vb" />
+    <Compile Include="mzPack\mzWebCache\Cache.vb" />
+    <Compile Include="mzPack\mzWebCache\mzMLScans.vb" />
+    <Compile Include="mzPack\mzWebCache\mzXMLScans.vb" />
+    <Compile Include="mzPack\mzWebCache\ScanPopulator.vb" />
+    <Compile Include="mzPack\Stream\Scan.vb" />
     <Compile Include="NamespaceDoc.vb" />
     <Compile Include="SpectrumTree.vb" />
     <Compile Include="MarkupData\IBase64Container.vb" />
