split source file module

--- a/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -506,6 +506,8 @@
     <Compile Include="Chromatogram\Quantile.vb" />
     <Compile Include="Chromatogram\ROI.vb" />
     <Compile Include="Extensions.vb" />
+    <Compile Include="Ms1\ms1Abstract.vb" />
+    <Compile Include="Ms1\ms1_scan.vb" />
     <Compile Include="Ms1\Ms1FeatureExtensions.vb" />
     <Compile Include="Ms1\PolarityData.vb" />
     <Compile Include="Ms1\PrecursorType\TypeMatch.vb" />
