--- a/src/metadna/metaDNA/metaDNA.vbproj
+++ b/src/metadna/metaDNA/metaDNA.vbproj
@@ -65,8 +65,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithm.vb" />
+    <Compile Include="KEGGNetwork.vb" />
     <Compile Include="KEGGHandler.vb" />
     <Compile Include="Models\AnnotatedSeed.vb" />
+    <Compile Include="Models\InferLink.vb" />
     <Compile Include="Models\KEGGQuery.vb" />
     <Compile Include="Models\MassIndexKey.vb" />
     <Compile Include="Models\UnknownSet.vb" />
