split source file module

--- a/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/src/mzmath/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -520,9 +520,9 @@
     <Compile Include="Ms1\Tolerance\PPM.vb" />
     <Compile Include="Ms1\Tolerance\DeltaMass.vb" />
     <Compile Include="Ms1\Tolerance\Tolerance.vb" />
-    <Compile Include="Spectra\Alignment\Class1.vb" />
-    <Compile Include="Spectra\Alignment\Class2.vb" />
-    <Compile Include="Spectra\Alignment\Class3.vb" />
+    <Compile Include="Spectra\Alignment\JaccardAlignment.vb" />
+    <Compile Include="Spectra\Alignment\CosAlignment.vb" />
+    <Compile Include="Spectra\Alignment\ScoreAggregates.vb" />
     <Compile Include="Spectra\Models\ms2.vb" />
     <Compile Include="Spectra\Models\Trimming\QuantileIntensityCutoff.vb" />
     <Compile Include="Spectra\Models\Trimming\RelativeIntensityCutoff.vb" />
