--- a/src/metadna/metaDNA/metaDNA.vbproj
+++ b/src/metadna/metaDNA/metaDNA.vbproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D7354D23-DB6D-4BA0-A10F-0486EF9ADD7E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>metaDNA</RootNamespace>
-    <AssemblyName>metaDNA</AssemblyName>
+    <RootNamespace>BioNovoGene.BioDeep.MetaDNA</RootNamespace>
+    <AssemblyName>BioNovoGene.BioDeep.MetaDNA</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
@@ -19,7 +19,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>metaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioNovoGene.BioDeep.MetaDNA.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -28,7 +28,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>metaDNA.xml</DocumentationFile>
+    <DocumentationFile>BioNovoGene.BioDeep.MetaDNA.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -76,6 +76,7 @@
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="My Project\Resources.Designer.vb">
       <AutoGen>True</AutoGen>
