--- a/src/metadna/metaDNA/metaDNA.vbproj
+++ b/src/metadna/metaDNA/metaDNA.vbproj
@@ -102,6 +102,7 @@
   <ItemGroup>
     <Compile Include="Algorithm.vb" />
     <Compile Include="Infer\CandidateInfer.vb" />
+    <Compile Include="Infer\InferLevel.vb" />
     <Compile Include="Infer\SeedsProvider.vb" />
     <Compile Include="KEGGNetwork.vb" />
     <Compile Include="KEGGHandler.vb" />
