--- a/src/metadna/metaDNA/metaDNA.vbproj
+++ b/src/metadna/metaDNA/metaDNA.vbproj
@@ -129,6 +129,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="Result\MetaDNAResult.vb" />
+    <Compile Include="Result\NetworkHandler.vb" />
     <Compile Include="Result\ResultHandler.vb" />
   </ItemGroup>
   <ItemGroup>
