--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -967,6 +967,8 @@
     <None Include="Resources\toolkit.ico" />
     <None Include="Res\preferences-system-sharing.png" />
     <None Include="Res\IE.ico" />
+    <None Include="Resources\1200px-Checked.svg.png" />
+    <None Include="Resources\img_561134.png" />
     <Content Include="RibbonMarkup.h" />
     <Content Include="RibbonMarkup.xml" />
     <None Include="Resources\header-foreground-image.png" />
