--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -452,6 +452,12 @@
     <Compile Include="pages\dockWindow\tools\PropertyWindow.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="pages\pageStart\VideoCards.Designer.vb">
+      <DependentUpon>VideoCards.vb</DependentUpon>
+    </Compile>
+    <Compile Include="pages\pageStart\VideoCards.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="pages\toolkit\PlotTooltip.vb">
       <SubType>Component</SubType>
     </Compile>
@@ -715,6 +721,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="pages\dockWindow\tools\TaskListWindow.resx">
       <DependentUpon>TaskListWindow.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="pages\pageStart\VideoCards.resx">
+      <DependentUpon>VideoCards.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="pages\toolkit\PageMoleculeNetworking.resx">
       <DependentUpon>PageMoleculeNetworking.vb</DependentUpon>
