fix of get GCMS quantify ion

--- a/src/mzkit/Task/Task.vbproj
+++ b/src/mzkit/Task/Task.vbproj
@@ -154,6 +154,7 @@
     <Compile Include="BioDeep\SessionInfo.vb" />
     <Compile Include="BioDeep\MessageParser.vb" />
     <Compile Include="IonLibrary.vb" />
+    <Compile Include="GCMSQuantifyIon.vb" />
     <Compile Include="Studio\WorkStudio.vb" />
     <Compile Include="Studio\Notification.vb" />
     <Compile Include="Imports\ImportsMgf.vb" />
