--- a/src/metadna/metaDNA/metaDNA.vbproj
+++ b/src/metadna/metaDNA/metaDNA.vbproj
@@ -27,7 +27,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Rsharp_app_release|x64'">
     <DebugSymbols>true</DebugSymbols>
     <DefineTrace>true</DefineTrace>
-    <OutputPath>..\mzkit_app\assembly\</OutputPath>
+    <OutputPath>..\..\..\Rscript\Library\mzkit_app\assembly\</OutputPath>
     <RemoveIntegerChecks>true</RemoveIntegerChecks>
     <DocumentationFile>BioNovoGene.BioDeep.MetaDNA.xml</DocumentationFile>
     <NoWarn>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</NoWarn>
