--- a/src/mzkit/mzkit/mzkit_win32.vbproj
+++ b/src/mzkit/mzkit/mzkit_win32.vbproj
@@ -990,6 +990,9 @@
     <None Include="Resources\img_561134.png" />
     <None Include="Resources\DBFile.ico" />
     <Content Include="Flask.ico" />
+    <None Include="Resources\Flask.png" />
+    <None Include="Resources\Flask_no_bubbles.png" />
+    <None Include="Resources\Home_Logo.png" />
     <Content Include="RibbonMarkup.h" />
     <Content Include="RibbonMarkup.xml" />
     <None Include="Resources\header-foreground-image.png" />
