the most common ion activation techniques employed in tandem mass spectrometry

--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -538,6 +538,7 @@
     <Compile Include="mzPack\Binary\BinaryStreamWriter.vb" />
     <Compile Include="mzPack\Binary\BinaryStreamReader.vb" />
     <Compile Include="mzPack\Binary\NamespaceDoc.vb" />
+    <Compile Include="mzPack\ActivationMethods.vb" />
     <Compile Include="mzPack\Stream\MSScan.vb" />
     <Compile Include="UnifyReader\Chromatogram.vb" />
     <Compile Include="UnifyReader\FileFormats\imzMLScan.vb" />
