split source file module

--- a/src/assembly/assembly/assembly.vbproj
+++ b/src/assembly/assembly/assembly.vbproj
@@ -539,6 +539,7 @@
     <Compile Include="mzPack\Binary\BinaryStreamReader.vb" />
     <Compile Include="mzPack\Binary\NamespaceDoc.vb" />
     <Compile Include="mzPack\ActivationMethods.vb" />
+    <Compile Include="mzPack\Stream\ScanMS1.vb" />
     <Compile Include="mzPack\Stream\MSScan.vb" />
     <Compile Include="UnifyReader\Chromatogram.vb" />
     <Compile Include="UnifyReader\FileFormats\imzMLScan.vb" />
@@ -551,7 +552,7 @@
     <Compile Include="mzPack\mzWebCache\mzMLScans.vb" />
     <Compile Include="mzPack\mzWebCache\mzXMLScans.vb" />
     <Compile Include="mzPack\mzWebCache\ScanPopulator.vb" />
-    <Compile Include="mzPack\Stream\Scan.vb" />
+    <Compile Include="mzPack\Stream\ScanMS2.vb" />
     <Compile Include="NamespaceDoc.vb" />
     <Compile Include="SpectrumTree.vb" />
     <Compile Include="MarkupData\IBase64Container.vb" />
