how to run search based on mzpack file

--- a/src/mzkit/Task/Task.vbproj
+++ b/src/mzkit/Task/Task.vbproj
@@ -155,6 +155,7 @@
     <Compile Include="BioDeep\MessageParser.vb" />
     <Compile Include="IonLibrary.vb" />
     <Compile Include="GCMSQuantifyIon.vb" />
+    <Compile Include="MetaDNASearch.vb" />
     <Compile Include="Studio\WorkStudio.vb" />
     <Compile Include="Studio\Notification.vb" />
     <Compile Include="ParentMatch.vb" />
