--- a/src/mzkit/Task/Task.vbproj
+++ b/src/mzkit/Task/Task.vbproj
@@ -151,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BioDeep\BioDeepSession.vb" />
+    <Compile Include="BioDeep\KEGGRepo.vb" />
     <Compile Include="BioDeep\SessionInfo.vb" />
     <Compile Include="BioDeep\MessageParser.vb" />
     <Compile Include="IonLibrary.vb" />
@@ -212,6 +213,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\GCModeller\src\GCModeller\core\Bio.Assembly\Bio.Assembly.vbproj">
+      <Project>{c699d311-9923-4c19-bf70-5048d0e2cf5d}</Project>
+      <Name>Bio.Assembly</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\GCModeller\src\R-sharp\R#\R.vbproj">
       <Project>{0c2eb77c-39f2-460d-a3f8-ce905f867637}</Project>
       <Name>R</Name>
